--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ byteorder = "1.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_yaml = "0.9"
+porter-stemmer = "0.1"
