--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 chashmap = "2.2"
 stringreader = "0.1"
-clap = "4.0"
+clap = { version = "4.0", features = ["derive"] }
 env_logger = "0.9"
 log = "0.4"
 byteorder = "1.4"
